[metadata]
name = fbchat
version = attr: fbchat.__version__
license = BSD
license_file = LICENSE.txt

author = Taehoon Kim
author_email = carpedm20@gmail.com
maintainer = Mads Marquart
maintainer_email = madsmtm@gmail.com

description = Facebook Chat (Messenger) for Python
long_description = file: README.rst
long_description_content_type = text/x-rst

keywords = Facebook FB Messenger Chat Api Bot
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications :: Chat
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

url = https://github.com/carpedm20/fbchat/
project_urls =
    Documentation = https://fbchat.readthedocs.io/
    Repository = https://github.com/carpedm20/fbchat/

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4.0
install_requires =
    requests
    beautifulsoup4
    # May not work in pip with bdist_wheel
    # See https://wheel.readthedocs.io/en/latest/#defining-conditional-dependencies
    # It is therefore defined in setup.py
    # enum34; python_version < '3.4'
